<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.password.PasswordFragment">


    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_size_16dp"
                    android:drawableTop="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="@dimen/padding_size_16dp"
                    android:drawableTint="@color/design_default_color_primary"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_size_8dp"
                    android:text="@string/label_password_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute" />

            <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_size_16dp"
                    android:layout_marginTop="@dimen/padding_size_8dp"
                    android:layout_marginEnd="@dimen/padding_size_16dp"
                    android:padding="@dimen/padding_size_16dp"
                    android:text="@string/label_password_sub_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_1" />

            <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_size_16dp"
                    android:layout_marginTop="@dimen/padding_size_16dp"
                    android:layout_marginEnd="@dimen/padding_size_16dp"
                    android:background="@drawable/square_edit_text"
                    android:hint="@string/label_old_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_size_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_2"
                    tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_size_16dp"
                    android:layout_marginTop="@dimen/padding_size_16dp"
                    android:layout_marginEnd="@dimen/padding_size_16dp"
                    android:background="@drawable/square_edit_text"
                    android:hint="@string/label_new_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_size_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_old_password"
                    tools:ignore="Autofill,TextFields" />

            <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_size_16dp"
                    android:layout_marginTop="@dimen/padding_size_16dp"
                    android:layout_marginEnd="@dimen/padding_size_16dp"
                    android:background="@drawable/square_edit_text"
                    android:hint="@string/label_confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_size_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_new_password"
                    tools:ignore="Autofill,TextFields" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_size_16dp"
                    android:layout_marginTop="@dimen/padding_size_16dp"
                    android:layout_marginEnd="@dimen/padding_size_16dp"
                    android:layout_marginBottom="@dimen/padding_size_16dp"
                    android:padding="@dimen/padding_size_16dp"
                    android:text="@string/label_change_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>