<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.explorer.ExplorerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_file_explorer_header"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                android:drawableTop="@drawable/ic_folder_open_black_24dp"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sub_header_file_explorer"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
                android:padding="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_8dp"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_explore_assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_label_assignment"
                android:padding="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_16dp"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_explorer_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_label_report"
                android:padding="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_16dp"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                android:layout_marginBottom="@dimen/padding_size_16dp"
                app:layout_constraintTop_toBottomOf="@id/btn_explore_assignment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>